[REFACTOR] IDEA Code Inspect